// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🖤 deprecated Components/Badges Customized Badge 1`] = `
.c0 .badge {
  width: 24px;
  height: 24px;
  top: -12px;
  right: -12px;
  bottom: auto;
  left: auto;
}

<div>
  <span
    className="MuiBadge-root c0"
    placement="top-right"
  >
    <button>
      I have special badge
    </button>
    <span
      className="MuiBadge-badge badge MuiBadge-anchorOriginTopRightRectangle"
    >
      <input
        type="checkbox"
      />
    </span>
  </span>
</div>
`;

exports[`Storyshots 🖤 deprecated Components/Badges Placement 1`] = `
.c1 .badge {
  width: 24px;
  height: 24px;
  top: -12px;
  right: auto;
  bottom: auto;
  left: -12px;
}

.c2 .badge {
  width: 24px;
  height: 24px;
  top: -12px;
  right: -12px;
  bottom: auto;
  left: auto;
}

.c3 .badge {
  width: 24px;
  height: 24px;
  top: auto;
  right: auto;
  bottom: -12px;
  left: -12px;
}

.c4 .badge {
  width: 24px;
  height: 24px;
  top: auto;
  right: -12px;
  bottom: -12px;
  left: auto;
}

.c0 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div>
    <span
      className="MuiBadge-root c1"
      placement="top-left"
    >
      <button>
        top-left
      </button>
      <span
        className="MuiBadge-badge badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
      >
        1
      </span>
    </span>
    <span
      className="MuiBadge-root c2"
      placement="top-right"
    >
      <button>
        top-right
      </button>
      <span
        className="MuiBadge-badge badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
      >
        1
      </span>
    </span>
  </div>
  <div>
    <span
      className="MuiBadge-root c3"
      placement="bottom-left"
    >
      <button>
        bottom-left
      </button>
      <span
        className="MuiBadge-badge badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
      >
        1
      </span>
    </span>
    <span
      className="MuiBadge-root c4"
      placement="bottom-right"
    >
      <button>
        bottom-right
      </button>
      <span
        className="MuiBadge-badge badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
      >
        1
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots 🖤 deprecated Components/Badges Simple Badge 1`] = `
.c0 .badge {
  width: 24px;
  height: 24px;
  top: -12px;
  right: -12px;
  bottom: auto;
  left: auto;
}

<div>
  <div>
    <span
      className="MuiBadge-root c0"
      placement="top-right"
    >
      <button>
        primary
      </button>
      <span
        className="MuiBadge-badge badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
      >
        1
      </span>
    </span>
  </div>
  <br />
  <div>
    <span
      className="MuiBadge-root c0"
      placement="top-right"
    >
      <button>
        secondary
      </button>
      <span
        className="MuiBadge-badge badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary"
      >
        10
      </span>
    </span>
  </div>
</div>
`;
